--- a/Seminarios/S2/makefile
+++ b/Seminarios/S2/makefile
@@ -7,14 +7,14 @@ hmonsrcs:= HoareMonitor.h HoareMonitor.cpp Semaphore.h Semaphore.cpp
 
 prodcons2_su_exe: prodcons2_su.cpp $(hmonsrcs)
 	$(compilador) $(opcionesc)  -o $@ $<  HoareMonitor.cpp Semaphore.cpp
-prodconsVariosFIFO_sc_exe: prodconsVariosFIFO_sc.cpp $(hmonsrcs)
+prodconsVariosFIFO_sc_exe: prodconsVariosFIFO_sc.cpp
 	$(compilador) $(opcionesc)  -o $@ $<
-prodconsVariosLIFO_sc_exe: prodconsVariosFIFO_sc.cpp $(hmonsrcs)
+prodconsVariosLIFO_sc_exe: prodconsVariosFIFO_sc.cpp
 	$(compilador) $(opcionesc)  -o $@ $<
-prodconsVariosFIFO_su_exe: prodconsVariosFIFO_su.cpp $(hmonsrcs)
-	$(compilador) $(opcionesc)  -o $@ $<  HoareMonitor.cpp
-prodconsVariosLIFO_su_exe: prodconsVariosLIFO_su.cpp $(hmonsrcs)
-	$(compilador) $(opcionesc)  -o $@ $<  HoareMonitor.cpp
+prodconsVariosFIFO_su_exe: prodconsVariosFIFO_su.cpp 
+	$(compilador) $(opcionesc) $(hmonsrcs) -o $@ $<
+prodconsVariosLIFO_su_exe: prodconsVariosLIFO_su.cpp
+	$(compilador) $(opcionesc) $(hmonsrcs) -o $@ $< 
 
 clean:
 	rm -f *_exe
