--- a/Practicas/P2/makefile
+++ b/Practicas/P2/makefile
@@ -7,6 +7,10 @@ hmonsrcs:= HoareMonitor.h HoareMonitor.cpp Semaphore.h Semaphore.cpp
 
 fumadoresSU_exe: fumadoresSU.cpp 
 	$(compilador) $(opcionesc) $(hmonsrcs) -o $@ $<
+barbero_exe: Barbero.cpp
+	$(compilador) $(opcionesc) $(hmonsrcs) -o $@ $<
+barberia2_exe: barberia2.cpp
+	$(compilador) $(opcionesc) $(hmonsrcs) -o $@ $<
 
 clean:
 	rm -f *_exe
